syntax = "proto3";

option csharp_namespace = "MLAgents.CommunicatorObjects";
package communicator_objects;

message DemonstrationMetaProto {
    int32 api_version = 1;
    int32 number_steps = 2;
    int32 number_episodes = 3;
    float mean_reward = 4;
}
